<resources>

    //General Stuff
    <string name="app_name">CulDeChouette</string>
    <string name="buttonPlaceholder">C\'est un bouton</string>
    <string name="imagePlaceholder">C\'est une image</string>
    <string name="usernamePlaceholder">Pseudonyme</string>
    <string name="rules">Regles</string>
    <string name="back">Retour</string>

    //MainActivity
    <string name="touchText">Touchez pour commencer</string>

    //HostChoiceActivity
    <string name="createText">Creer</string>
    <string name="joinText">Joindre</string>
    <string name="usernameText">Pseudo:</string>
    <string name="errorUsername">Rentrez un pseudo!</string>
    <string name="errorRoom">Choisissez une salle!</string>
    <string name="errorBoth">Choisissez un pseudo et une salle!</string>
    <string name="errorSelectionRoom">Sélectionez une salle à rejoindre!</string>
    <string name="errorNoRoom">Aucune salle existante!</string>
    <string name="capacityRoom">%1$d\/%2$d</string>

    //TutorialActivity
    <string name="rulesTitle">Le cul d\'chouette</string>
    /*Faut rajouter le reste des règles ici */

    //SettingsActivity
    <string name="settingsTitle">Parametres</string>
    <string name="volumePercentage">%1$s%%</string>

    //CreationRoomActivity
    <string name="creationTitle">Creer une salle</string>
    <string name="roomName">Nom de la Salle :</string>
    <string name="numberPlayer">Nombre de joueurs :</string>
    <string name="baseRoomName">Salle de %1$s</string>
    <string name="roomNamePlaceholder">Nom de la salle</string>
    <string name="askPassword">Salle Privee?</string>
    <string name="password">Mot de Passe:</string>
    <string name="passwordPlaceholder">Mot de Passe</string>

    //WaitingRoomActivity
    <string name="readyText">Pret</string>
    <string name="waitingTitle">Salle d\'attente</string>

    //PasswordPopup
    <string name="titlePassword">Entrez le mot de passe:</string>
    <string name="validateButton">Valider</string>
    <string name="incorrectPassword">Mot de Passe Incorrect!</string>

    //MatchmakingPopup
    <string name="matchmakingText">Voulez-vous arreter le matchmaking et revenir au menu principal?</string>
    <string name="cancelButton">Annuler</string>
    <string name="confirmButton">Confirmer</string>

    //GameActivity
    <string name="yourTurn">C\'est à vous!</string>
    <string name="turn">C\'est le tour de %1$s!</string>
    <string name="ragequit">Tous les autres joueurs ont quittés!</string>
    <string name="grelottePicotte">Grelotte ca picotte!</string>
    <string name="mouCaillou">Pas mou le caillou!</string>
    <string name="sirop">Sirotage</string>
    <string name="fail">Bevue!</string>
    <string name="next">Finir le tour</string>
    <string name="victory">Victoire de %1$s!</string>

    //ScoreboardActivity
    <string name="resultsTitle">Resultats</string>

    //RulesListView
    <string-array name="Rules">
        <item name="namingRule">Il s\'agit d\'un jeu de des en tour par tour</item>
        <item name="victoryRule">Le vainqueur est le premier joueur a obtenir ou depasser 342 points</item>
        <item name="rollDiceRule">Le joueur secoue le telephone ou touche l\'ecran pour lancer les des</item>
        <item name="chouetteRule">Le joueur realise une chouette si deux des trois des lances sont identiques</item>
        <item name="chouettePointsRule">Realiser une chouette rapporte: 1->1pt 2->4pts 3->9pts 4->16pts 5->25pts 6->36pts</item>
        <item name="culDeChouetteRule">Le joueur realise un cul de chouette si les trois des lances sont identiques</item>
        <item name="culDeChouettePointsRule">Realiser un cul de chouette rapport: 1->50pts 2->60pts 3->70pts 4->80pts 5->90pts 6->100pts</item>
        <item name="sirotageRule">Si un joueur realise une chouette, il peut choisir de relancer le troisieme de pour obtenir un cul de chouette
        S\'il gagne, il remporte les points du cul de chouette. Sinon, il perd les points de la chouette sans les encaisser au prealable</item>
        <item name="veluteRule">Le joueur realise une velute lorsque la somme de deux des est egale a la valeur du troisieme</item>
        <item name="velutePointRule">Realiser une velute rapporte: 2->8pts 3->18pts 4->32pts 5->50pts 6->72pts</item>
        <item name="chouetteVeluteRule">Le joueur realise une chouette velute lorsque la somme de deux des identiques est egales a la valeur du troisieme.
        Realiser une chouette velute rapporte le meme nombre de points qu\'une velute.</item>
        <item name="pasMouLeCaillouRule">Lorsqu\'un joueur realise une chouette velute, le joueur qui aura le plus appuye sur le bouton "Pas mou le caillou!"
        gagne les points de la chouette velute</item>
        <item name="suiteRule">Le joueur realise une suite si le resultat des trois des se suivent</item>
        <item name="grelotteCaPicotteRule">Lorsqu\'un joueur realise une suite, tout les joueurs doivent appuyer de facon repetee sur le bouton "grellotte ca picotte!"
        Le joueur le faisant le moins de fois perd 10pts</item>
        <item name="neantRule">Si le joueur ne realise aucune de ces figures, il ne gagne pas de point: c\'est un neant. </item>
        <item name= "bevueRule">Si le joueur appuie sur un bouton par erreur, c\'est une bevue. Le joueur perd alors 5 points par appui</item>
    </string-array>

</resources>
