<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/password_popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/creationTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/grafik"
        android:text="@string/titlePassword"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <ImageButton
        android:id="@+id/passwordBackButton"
        android:layout_width="139dp"
        android:layout_height="64dp"
        android:layout_marginTop="44dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/buttonPlaceholder"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/passwordValue"
        app:layout_constraintTop_toBottomOf="@+id/passwordValue"
        app:srcCompat="@drawable/button_texture" />

    <TextView
        android:id="@+id/backText"
        android:layout_width="103dp"
        android:layout_height="44dp"
        android:fontFamily="@font/faith"
        android:text="@string/back"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/passwordBackButton"
        app:layout_constraintEnd_toEndOf="@+id/passwordBackButton"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/passwordBackButton"
        app:layout_constraintTop_toTopOf="@+id/passwordBackButton"
        app:layout_constraintVertical_bias="0.48" />

    <ImageButton
        android:id="@+id/validationButton"
        android:layout_width="139dp"
        android:layout_height="64dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/buttonPlaceholder"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/passwordBackButton"
        app:layout_constraintStart_toEndOf="@+id/passwordValue"
        app:layout_constraintTop_toTopOf="@+id/passwordBackButton"
        app:srcCompat="@drawable/button_texture" />

    <TextView
        android:id="@+id/validationText"
        android:layout_width="103dp"
        android:layout_height="44dp"
        android:fontFamily="@font/faith"
        android:text="@string/validateButton"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/validationButton"
        app:layout_constraintEnd_toEndOf="@+id/validationButton"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/validationButton"
        app:layout_constraintTop_toTopOf="@+id/validationButton"
        app:layout_constraintVertical_bias="0.48" />

    <EditText
        android:id="@+id/passwordValue"
        android:layout_width="302dp"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"
        android:alpha="0.4"
        android:background="@color/black"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/faith"
        android:hint="@string/passwordPlaceholder"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/creationTitleText"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/creationTitleText"
        app:layout_constraintTop_toBottomOf="@+id/creationTitleText"
        tools:targetApi="o" />
</androidx.constraintlayout.widget.ConstraintLayout>