<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/matchmaking_popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_background"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/cancelButton"
        android:layout_width="139dp"
        android:layout_height="64dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/buttonPlaceholder"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/confirmButton"
        app:layout_constraintStart_toStartOf="@+id/matchmakingPopup"
        app:layout_constraintTop_toTopOf="@+id/confirmButton"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/button_texture" />

    <TextView
        android:id="@+id/cancelText"
        android:layout_width="103dp"
        android:layout_height="44dp"
        android:fontFamily="@font/faith"
        android:text="@string/cancelButton"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="@+id/cancelButton"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/cancelButton"
        app:layout_constraintTop_toTopOf="@+id/cancelButton"
        app:layout_constraintVertical_bias="0.48" />

    <ImageButton
        android:id="@+id/confirmButton"
        android:layout_width="139dp"
        android:layout_height="64dp"
        android:layout_marginTop="52dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/buttonPlaceholder"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@+id/matchmakingPopup"
        app:layout_constraintTop_toBottomOf="@+id/matchmakingPopup"
        app:srcCompat="@drawable/button_texture" />

    <TextView
        android:id="@+id/confirmText"
        android:layout_width="154dp"
        android:layout_height="45dp"
        android:fontFamily="@font/faith"
        android:text="@string/confirmButton"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/confirmButton"
        app:layout_constraintEnd_toEndOf="@+id/confirmButton"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/confirmButton"
        app:layout_constraintTop_toTopOf="@+id/confirmButton"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/matchmakingPopup"
        android:layout_width="615dp"
        android:layout_height="110dp"
        android:fontFamily="@font/grafik"
        android:text="@string/matchmakingText"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />


</androidx.constraintlayout.widget.ConstraintLayout>